--- a/index.html
+++ b/index.html
@@ -18,45 +18,38 @@
   <!-- STORY PAGE STYLES -->
   <style>
     main.story-content {
-      width: 100%;
-      padding: 4rem 2rem;
+      width: 70%;
+      margin: 2rem auto;
       background: #000;
       color: #fafafa;
       font-family: 'Bebas Neue', sans-serif;
     }
     .story-section {
-      margin-bottom: 4rem;
-    }
-    /* Stagger left/right */
-    .story-section:nth-of-type(odd) {
-      padding-right: 15%;
-    }
-    .story-section:nth-of-type(even) {
-      padding-left: 15%;
-    }
-    .story-section p {
-      font-size: 1.6rem;
-      line-height: 1.6;
-      margin: 1.5rem 0;
-    }
-    .story-section h2 {
-      font-size: 3rem;
-      text-transform: uppercase;
-      margin-bottom: 1rem;
-    }
-    .story-intro {
-      text-align: center;
+      margin-bottom: 2rem;
+      border: none;
+      padding: 0;
     }
     .story-intro strong {
       display: block;
+      font-size: 2rem;
+      margin: 1.5rem 0;
+    }
+    .story-section p {
+      font-size: 1.4rem;
+      line-height: 1.5;
+      margin: 1rem 0;
+    }
+    .story-section h2 {
       font-size: 2.5rem;
-      margin-bottom: 2rem;
+      text-transform: uppercase;
+      margin: 1rem 0;
     }
     .story-video {
       text-align: center;
+      margin-top: 2rem;
     }
     .story-video iframe {
-      width: 80%;
+      width: 100%;
       max-width: 800px;
       height: auto;
       border: none;
@@ -147,7 +140,7 @@
 
     <section class="story-section story-video">
       <h2>Watch “Cutters Choice Radio: The Documentary”</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
   </main>
 
