--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta http-equiv="Expires"      content="0">
   <meta name="viewport"           content="width=device-width, initial-scale=1.0">
   <title>Our Story – Cutters Choice Radio</title>
-  
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="style.css?v=1748349660086">
   <!-- Bebas Neue & FontAwesome -->
@@ -25,40 +24,45 @@
       font-family: 'Bebas Neue', sans-serif;
     }
     .story-section {
-      margin-bottom: 2rem;
-      border: none;
+      margin-bottom: 1rem;
       padding: 0;
+      border: none !important;
+    }
+    .story-section:first-child {
+      margin-top: 1rem;
     }
     .story-intro strong {
       display: block;
       font-size: 2rem;
-      margin: 1.5rem 0;
+      margin: 1rem 0;
     }
     .story-section p {
       font-size: 1.4rem;
       line-height: 1.5;
-      margin: 1rem 0;
+      margin: 0.75rem 0;
     }
     .story-section h2 {
       font-size: 2.5rem;
       text-transform: uppercase;
-      margin: 1rem 0;
+      margin: 1rem 0 0.5rem;
+      padding: 0;
+      border: none !important;
     }
     .story-video {
-      text-align: center;
-      margin-top: 2rem;
+      text-align: left;
+      margin: 0;
+      padding: 0;
     }
     .story-video iframe {
-      width: 100%;
+      width: 80%;
       max-width: 800px;
       height: auto;
       border: none;
     }
   </style>
 </head>
-
 <body>
-  <!-- HEADER & NAV (same as main page) -->
+  <!-- HEADER & NAV -->
   <header class="header-banner">
     <div class="header-gif-right"></div>
     <div class="header-gif-left"></div>
@@ -90,7 +94,6 @@
       </a>
     </div>
   </nav>
-
   <!-- OUR STORY CONTENT -->
   <main class="story-content">
     <section class="story-section story-intro">
@@ -99,57 +102,71 @@
       Cutters Choice Radio<br>
       The myth, the legend, the fairy story... and now the movie. This is Cutters Choice Radio.</strong>
     </section>
-
     <section class="story-section">
       <p>Cutters Choice Radio is the wayward, rebellious, offspring of station boss Benny Fonzarelli.</p>
       <p>Way back in the Summer of 2011, Benny Fonzarelli, a young punk hailing from Wycombe and his pal Xavi from Barcelona had plans to start a band. Like all young punks they wanted to get their music out there and find a release from the trials and tribulations of everyday life.</p>
       <p>That band was Cutters Choice.</p>
     </section>
-
     <section class="story-section">
       <h2>The Mad Women's Shit Sessions</h2>
       <p>Starting out just once a week, Benny and Xavi were soon joined by Benny’s brother Chester Bothworlds and good friend West Ham Dave. Xavi eventually moved to California but Cutters Choice Radio continued, as did Benny’s ‘Mad Womans Shit Sessions’ show. Giving long established radio show formats a run for their money, Traffic Island Dicks anyone?</p>
       <p>The list of quality (and lairy) DJs grew and in addition to Chester &amp; Dave, new additions Rolex Tharsus and Burns Van De Graaf joined the party. Every Wednesday since has been Cutters Choice Radio night and they have built up a solid foundation of listeners. On top of that, Benny, Chez, Dave and two other friends, Mick and Smiler had formed the Irreverence Soundsystem and put on regular Wycombe-based parties that have run for many years now. If you remember them then you probably weren’t there.</p>
     </section>
-
     <section class="story-section">
       <h2>The Unofficial Isolation Station</h2>
       <p>Fast forward to March 2020 and Covid 19 came and gatecrashed the party. Bad news for the world in general but Cutters Choice rose from the flames like a beer sodden phoenix. The inevitable lockdown happened and around that time DJ Country Cockney who Benny and Chester had been chasing for a while to do a show had suddenly found himself with far too much time on his hands.</p>
       <p>Keen to rekindle his love of DJing he agreed to do a show and was immediately bowled over by the open-minded nature of both the CCR family and the warmth, musical knowledge and killer humour of the listeners. He was hooked. So much so that he jumped in with both feet and started playing for up to 5 hours every day (if you managed to listen to every single hour of Country Cockney’s lockdown shows then let us know and we’ll send you a certificate).</p>
     </section>
-
     <section class="story-section">
       <h2>Take it to the next level</h2>
       <p>Never one to not take things to the next level Country Cockney also worked closely with Benny on a recruitment drive to find other jocks that had found themselves in a similar situation. The response was incredibly positive and both the number of DJs and the number of listeners rapidly grew. Country Cockney got even more involved and became a partner in the station.</p>
     </section>
-
     <section class="story-section">
       <h2>International DJs</h2>
       <p>The recruitment drive didn’t end there. Country Cockney’s online push for new “talent” resulted in a number of DJs joining from all parts of the globe. Cutters Choice Radio now has DJs based in New Zealand, Australia, Norway, USA, Canada and Spain with an increasingly diverse mix of styles and flavours.</p>
     </section>
-
     <section class="story-section">
       <h2>Radio Cult</h2>
       <p>In 2024 a big move in the history of the station took place with the switch to using Radio Cult as a new streaming service which increased audio quality and allowed for the first time for the station to stream in high quality 320. This move wasn’t without its tech hiccups but was necessary to provide the audio quality that bangers deserve.</p>
     </section>
-
     <section class="story-section">
       <h2>Relentless flavas, significant bangers</h2>
       <p>Today, Cutters Choice Radio has over 40 extremely talented DJs on its roster and offers quality music 24/7. It’s also very much retained its ‘anything goes’ mentality: You can expect to hear music right across the spectrum with a wide variety of genres covered, often just in one show! The DJs are all passionate about what they do and about ensuring that their shows are a cut above what you’d hear elsewhere. It’s that, as well as the incredible listener base that makes this station what it is and helps it to continue to grow at such a rate.</p>
     </section>
-
     <section class="story-section story-video">
       <h2>Watch “Cutters Choice Radio: The Documentary”</h2>
-      <iframe src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer class="banner"></footer>
 
-  <!-- GIF-SWAP SCRIPT -->
+  <!-- GIF‐SWAP SCRIPT -->
   <script>
-    (function(){ const right=document.querySelector('.header-gif-right'), left=document.querySelector('.header-gif-left'); let loopCount=0; const set1=["url('/images/Untitled%20design(4).gif')","url('/images/Untitled%20design(5).gif')"], set2=["url('/images/Untitled%20design(7).gif')","url('/images/Untitled%20design(8).gif')"]; let currentSet=set1; right.style.backgroundImage=currentSet[0]; left.style.backgroundImage=currentSet[1]; right.addEventListener('animationiteration',()=>{ loopCount++; if(loopCount%2===0){ currentSet=(currentSet===set1)?set2:set1; right.style.backgroundImage=currentSet[0]; left.style.backgroundImage=currentSet[1]; }});
+    (function(){
+      const right = document.querySelector('.header-gif-right');
+      const left  = document.querySelector('.header-gif-left');
+      let loopCount = 0;
+      const set1 = [
+        "url('/images/Untitled%20design(4).gif')",
+        "url('/images/Untitled%20design(5).gif')"
+      ];
+      const set2 = [
+        "url('/images/Untitled%20design(7).gif')",
+        "url('/images/Untitled%20design(8).gif')"
+      ];
+      let currentSet = set1;
+      right.style.backgroundImage = currentSet[0];
+      left.style.backgroundImage  = currentSet[1];
+      right.addEventListener('animationiteration', () => {
+        loopCount++;
+        if (loopCount % 2 === 0) {
+          currentSet = (currentSet === set1) ? set2 : set1;
+          right.style.backgroundImage = currentSet[0];
+          left.style.backgroundImage  = currentSet[1];
+        }
+      });
     })();
   </script>
 </body>
