--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- INLINE NAV STYLING -->
   <style>
     :root { --brand-teal: #5A8785; }
-    /* NAV styling (same as main page) */
+    /* NAV styling */
     #main-nav {
       display: flex !important;
       justify-content: space-between !important;
@@ -46,10 +46,11 @@
       text-decoration: none !important;
       margin: 0 0.5rem !important;
     }
-    #main-nav a.active { text-decoration: underline; }
     @media (max-width: 768px) {
       #main-nav .nav-left,
-      #main-nav .nav-right { display: none !important; }
+      #main-nav .nav-right {
+        display: none !important;
+      }
       #main-nav .nav-center {
         display: block !important;
         width: 100% !important;
@@ -64,6 +65,10 @@
 
   <!-- STORY PAGE STYLES -->
   <style>
+    main.story-content,
+    .story-section {
+      border: none !important;
+    }
     main.story-content {
       width: 70%;
       margin: 2rem auto;
@@ -76,8 +81,8 @@
       padding: 0;
     }
     .story-intro strong {
-      display: block;
       font-size: 2rem;
+      display: block;
       margin: 1rem 0;
     }
     .story-section p {
@@ -90,25 +95,29 @@
       text-transform: uppercase;
       margin: 1rem 0 0.5rem;
       padding: 0;
-      border: none;
     }
     .story-video {
-      text-align: left;
-      margin: 0;
       padding: 0;
+      margin: 0;
     }
-    .story-video iframe {
+    .story-video .video-wrapper {
+      position: relative;
       width: 100%;
-      max-width: 800px;
-      height: auto;
-      display: block;
+      padding-bottom: 56.25%; /* 16:9 aspect */
       margin: 1rem 0;
+    }
+    .story-video .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       border: none;
     }
     .back-home {
       display: inline-block;
       font-size: 1.6rem;
-      margin-top: 1rem;
+      margin: 1rem 0;
       text-decoration: none;
       color: var(--brand-teal);
     }
@@ -136,19 +145,14 @@
   <nav id="main-nav">
     <div class="nav-item nav-left">
       <a href="index.html">HOME</a>
-      <a href="our-story.html" class="active">OUR STORY</a>
     </div>
     <div class="nav-item nav-center">
       <a href="index-ourDJS.html">THE DJS</a>
     </div>
     <div class="nav-item nav-right">
       <a href="merch.html">MERCH</a>
-      <a href="https://facebook.com/cutterschoiceradio" target="_blank" class="social-icon">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://instagram.com/cutterschoiceradio" target="_blank" class="social-icon">
-        <i class="fab fa-instagram"></i>
-      </a>
+      <a href="https://facebook.com/cutterschoiceradio" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://instagram.com/cutterschoiceradio" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
     </div>
   </nav>
 
@@ -169,7 +173,7 @@
 
     <section class="story-section">
       <h2>The Mad Women's Shit Sessions</h2>
-      <p>Starting out just once a week, Benny and Xavi were soon joined by Benny’s brother Chester Bothworlds and good friend WestHamDave. Xavi eventually moved to California but Cutters Choice Radio continued, as did Benny’s ‘Mad Womans Shit Sessions’ show. Giving long established radio show formats a run for their money, Traffic Island Dicks anyone?</p>
+      <p>Starting out just once a week, Benny and Xavi were soon joined by Benny’s brother Chester Bothworlds and good friend West Ham Dave. Xavi eventually moved to California but Cutters Choice Radio continued, as did Benny’s ‘Mad Womans Shit Sessions’ show. Giving long established radio show formats a run for their money, Traffic Island Dicks anyone?</p>
       <p>The list of quality (and lairy) DJs grew and in addition to Chester &amp; Dave, new additions Rolex Tharsus and Burns Van De Graaf joined the party. Every Wednesday since has been Cutters Choice Radio night and they have built up a solid foundation of listeners. On top of that, Benny, Chez, Dave and two other friends, Mick and Smiler had formed the Irreverence Soundsystem and put on regular Wycombe-based parties that have run for many years now. If you remember them then you probably weren’t there.</p>
     </section>
 
@@ -201,7 +205,7 @@
 
     <section class="story-section story-video">
       <h2>Watch “Cutters Choice Radio: The Documentary”</h2>
-      <iframe src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="video-wrapper"><iframe src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
     </section>
 
     <a href="index.html" class="back-home">← Back to Main Page</a>
