--- a/index.html
+++ b/index.html
@@ -54,65 +54,91 @@
     }
   </style>
 
-  <!-- STORY PAGE STYLES -->
+  <!-- LOOSER “OUR STORY” STYLES -->
   <style>
-    /* Remove all borders from story sections */
-    main.story-content,
-    .story-section,
-    .story-section h2 { border: none !important; }
-
+    /* Container */
     main.story-content {
-      width: 70%;
+      max-width: 1000px;
+      width: 90%;
       margin: 2rem auto;
       padding: 0;
-      background: #000;
-      color: #fafafa;
       font-family: 'Bebas Neue', sans-serif;
+      color: #fafafa;
     }
+
+    /* Section spacing */
     .story-section {
-      margin-bottom: 1rem;
-      padding: 0;
+      padding: 2rem 0;
     }
-    .story-intro strong {
-      font-size: 2rem;
-      display: block;
+
+    /* Decorative divider */
+    .story-separator {
+      border: 0;
+      border-top: 1px dashed var(--brand-teal);
       margin: 1rem 0;
+      opacity: 0.6;
     }
-    .story-section p {
+
+    /* Intro */
+    .story-intro h1 {
+      font-size: 3rem;
+      font-style: italic;
+      margin-bottom: 1rem;
+      color: var(--brand-teal);
+    }
+    .story-intro p {
       font-size: 1.4rem;
-      line-height: 1.5;
-      margin: 0.75rem 0;
+      line-height: 1.6;
     }
+
+    /* Section headings */
     .story-section h2 {
       font-size: 2.5rem;
+      margin-bottom: 1rem;
       text-transform: uppercase;
-      margin: 1rem 0 0.5rem;
-      padding: 0;
+      position: relative;
     }
-    .story-video {
-      padding: 0;
-      margin: 0;
+    .story-section h2::after {
+      content: '';
+      display: block;
+      width: 50px;
+      height: 3px;
+      background: var(--brand-teal);
+      margin-top: 0.5rem;
     }
-    /* Responsive 16:9 embed */
+
+    /* Paragraphs */
+    .story-section p {
+      font-size: 1.2rem;
+      line-height: 1.6;
+      margin: 0.75rem 0;
+    }
+
+    /* Video */
     .story-video .video-wrapper {
       position: relative;
       width: 100%;
       padding-bottom: 56.25%;
-      margin: 1rem 0;
+      margin: 1.5rem 0;
     }
-    .story-video .video-wrapper iframe {
+    .story-video iframe {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
+      border: none;
     }
+
+    /* Back link */
     .back-home {
       display: inline-block;
-      font-size: 1.6rem;
-      margin: 1rem 0;
+      font-size: 1.4rem;
+      margin: 2rem 0;
       text-decoration: none;
       color: var(--brand-teal);
+      border-bottom: 1px solid var(--brand-teal);
+      padding-bottom: 2px;
     }
   </style>
 </head>
@@ -151,54 +177,83 @@
 
   <!-- OUR STORY CONTENT -->
   <main class="story-content">
+
+    <!-- Intro from mock -->
     <section class="story-section story-intro">
-      <strong>Who are these people anyway?<br>
-      What are these chancers all about?<br>
-      Cutters Choice Radio<br>
-      The myth, the legend, the fairy story... and now the movie. This is Cutters Choice Radio.</strong>
+      <h1>Make yourself at home…</h1>
+      <p>
+        We are an open-minded and musically diverse radio station, fast approaching our <strong>10th year</strong> of broadcasting.  
+        With over <strong>40 experienced</strong> and super-talented DJs bringing you a wide range of quality shows covering every genre thinkable. :contentReference[oaicite:1]{index=1}
+      </p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Origins -->
     <section class="story-section">
-      <p>Cutters Choice Radio is the wayward, rebellious, offspring of station boss Benny Fonzarelli.</p>
-      <p>Way back in the Summer of 2011, Benny Fonzarelli, a young punk hailing from Wycombe and his pal Xavi from Barcelona had plans to start a band. Like all young punks they wanted to get their music out there and find a release from the trials and tribulations of everyday life.</p>
-      <p>That band was Cutters Choice.</p>
+      <h2>Our Roots</h2>
+      <p>Cutters Choice Radio is the wayward, rebellious offspring of station boss Benny Fonzarelli. Back in the summer of 2011, Benny—a young punk from Wycombe—teamed up with Xavi from Barcelona to scratch that creative itch. That band was called Cutters Choice, and it was only the beginning.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- The Shit Sessions -->
     <section class="story-section">
-      <h2>The Mad Women's Shit Sessions</h2>
-      <p>Starting out just once a week, Benny and Xavi were soon joined by Benny’s brother Chester Bothworlds and good friend West Ham Dave. Xavi eventually moved to California but Cutters Choice Radio continued, as did Benny’s ‘Mad Womans Shit Sessions’ show. Giving long established radio show formats a run for their money, Traffic Island Dicks anyone?</p>
-      <p>The list of quality (and lairy) DJs grew and in addition to Chester &amp; Dave, new additions Rolex Tharsus and Burns Van De Graaf joined the party. Every Wednesday since has been Cutters Choice Radio night and they have built up a solid foundation of listeners. On top of that, Benny, Chez, Dave and two other friends, Mick and Smiler had formed the Irreverence Soundsystem and put on regular Wycombe-based parties that have run for many years now. If you remember them then you probably weren’t there.</p>
+      <h2>The Mad Women’s Shit Sessions</h2>
+      <p>What started as a once-a-week punk-fuelled experiment grew into a full-blown radio revolution—and “Traffic Island Dicks” became legend. DJs like Chester Bothworlds, West Ham Dave, Rolex Tharsus, and Burns Van De Graaf joined the party, and every Wednesday has been CCR night ever since.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Lockdown Era -->
     <section class="story-section">
       <h2>The Unofficial Isolation Station</h2>
-      <p>Fast forward to March 2020 and Covid 19 came and gatecrashed the party. Bad news for the world in general but Cutters Choice rose from the flames like a beer sodden phoenix. The inevitable lockdown happened and around that time DJ Country Cockney who Benny and Chester had been chasing for a while to do a show had suddenly found himself with far too much time on his hands.</p>
-      <p>Keen to rekindle his love of DJing he agreed to do a show and was immediately bowled over by the open-minded nature of both the CCR family and the warmth, musical knowledge and killer humour of the listeners. He was hooked. So much so that he jumped in with both feet and started playing for up to 5 hours every day (if you managed to listen to every single hour of Country Cockney’s lockdown shows then let us know and we’ll send you a certificate).</p>
+      <p>March 2020: Covid-19 gate-crashed the party, but CCR rose like a beer-sodden phoenix. Country Cockney took the mic, broadcasting marathon lockdown sets that hooked listeners worldwide—and earned himself a permanent seat at the table.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Next Level -->
     <section class="story-section">
-      <h2>Take it to the next level</h2>
-      <p>Never one to not take things to the next level Country Cockney also worked closely with Benny on a recruitment drive to find other jocks that had found themselves in a similar situation. The response was incredibly positive and both the number of DJs and the number of listeners rapidly grew. Country Cockney got even more involved and became a partner in the station.</p>
+      <h2>Take It to the Next Level</h2>
+      <p>Country Cockney’s recruitment push brought fresh jocks into the fold, and CCR’s roster—and listener base—exploded. Soon he was not just spinning tunes, but steering the ship as a full partner in Cutters Choice Radio.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- International DJs -->
     <section class="story-section">
       <h2>International DJs</h2>
-      <p>The recruitment drive didn’t end there. Country Cockney’s online push for new “talent” resulted in a number of DJs joining from all parts of the globe. Cutters Choice Radio now has DJs based in New Zealand, Australia, Norway, USA, Canada and Spain with an increasingly diverse mix of styles and flavours.</p>
+      <p>Now you’ll hear DJs from New Zealand, Australia, Norway, USA, Canada, Spain—and beyond. A truly global collective, united by one rule: anything goes.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Radio Cult -->
     <section class="story-section">
       <h2>Radio Cult</h2>
-      <p>In 2024 a big move in the history of the station took place with the switch to using Radio Cult as a new streaming service which increased audio quality and allowed for the first time for the station to stream in high quality 320. This move wasn’t without its tech hiccups but was necessary to provide the audio quality that bangers deserve.</p>
+      <p>In 2024 we made the leap to Radio Cult’s 320 kbps stream. There were tech hiccups, sure—but for “significant bangers,” nothing but the best will do.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Today -->
     <section class="story-section">
-      <h2>Relentless flavas, significant bangers</h2>
-      <p>Today, Cutters Choice Radio has over 40 extremely talented DJs on its roster and offers quality music 24/7. It’s also very much retained its ‘anything goes’ mentality: You can expect to hear music right across the spectrum with a wide variety of genres covered, often just in one show! The DJs are all passionate about what they do and about ensuring that their shows are a cut above what you’d hear elsewhere. It’s that, as well as the incredible listener base that makes this station what it is and helps it to continue to grow at such a rate.</p>
+      <h2>Relentless Flavas, Significant Bangers</h2>
+      <p>Today CCR is 24/7 quality mayhem, with over 40 DJs covering genres from jungle to footwork to UK hardcore—all on one fearless station.</p>
     </section>
 
+    <div class="story-separator"></div>
+
+    <!-- Documentary Video -->
     <section class="story-section story-video">
       <h2>Watch “Cutters Choice Radio: The Documentary”</h2>
-      <div class="video-wrapper"><iframe src="https://www.youtube.com/embed/6lcWDYT681g" title="Cutters Choice Radio Documentary" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+      <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/6lcWDYT681g"
+                title="Cutters Choice Radio Documentary"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
     </section>
 
     <a href="index.html" class="back-home">← Back to Main Page</a>
@@ -207,7 +262,7 @@
   <!-- FOOTER -->
   <footer class="banner"></footer>
 
-  <!-- GIF‐SWAP SCRIPT -->
+  <!-- GIF‐SWAP SCRIPT (unchanged) -->
   <script>
     (function() {
       const right = document.querySelector('.header-gif-right');
